--- a/flutterx/pubspec.yaml
+++ b/flutterx/pubspec.yaml
@@ -4,6 +4,12 @@ description: A new Flutter project.
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+      sdk: flutter
+  intl:
+  intl_translation:
+  http:
+  isolate:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -12,6 +18,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
 
 # For information on the generic Dart part of this file, see the
