--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,20 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+
+<key>CFBundleURLTypes</key>
+<array>
+    <dict>
+        <key>CFBundleTypeRole</key>
+        <string>Editor</string>
+        <key>CFBundleURLSchemes</key>
+        <array>
+            <!-- reverse url of your client id, for example: -->
+            <string>com.googleusercontent.apps.775885782355-pgca1r7buoh4j2pil368895j45uhhgo2</string>
+            <!-- bundle id, for example: -->
+            <string>com.yourcompany.flutterx</string>
+        </array>
+    </dict>
+</array>
 </dict>
 </plist>
