--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   cupertino_icons: ^0.1.0
 
   flutter_webview_plugin: "^0.1.5"
+  google_sign_in: "^3.0.3"
+  firebase_auth: "^0.5.5"
 
 dev_dependencies:
   flutter_test:
